--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>绝地求生辅助官网网站源码黑色大气带视频教程 - 由爱收集资源网整理发布</title>
-<meta name="keywords" content="绝地求生辅助、荒野行动辅助、荒野行动外挂、绝地求生外挂、绝地求生辅助购买、只做稳定辅助官网" />
+<title>大师工作室</title>
+<meta name="keywords" content="穿越火线辅助、荒野行动辅助、地下城外挂、绝地求生外挂、穿越火线辅助购买、只做稳定辅助官网" />
 <meta name="description" content="绝地求生辅助、荒野行动辅助、荒野行动外挂、绝地求生外挂、绝地求生辅助购买、只做稳定辅助官网"/>
 <!--meta name="404" content="www.123456.com" /-->
 
@@ -106,7 +106,7 @@ scroll_div.onmouseout=function() {MyMar=setInterval(Marquee,speed);}
 
 
 
-<script src="js/layer.min.js"></script>
+<script src="layer.min.js"></script>
  
 
  <!-- 导航区代码开始 -->
@@ -176,7 +176,7 @@ scroll_div.onmouseout=function() {MyMar=setInterval(Marquee,speed);}
 绝地求生-【溯影】- 稳定奔放中<br>
 绝地求生-【前任】- 稳定奔放中<br>
 绝地求生-【RPG】- 稳定奔放中<br>
-其他辅助-「租号宝」- 100%秒过租号<br><br>售后群：123456789
+其他辅助-「租号宝」- 100%秒过租号<br><br>售后群：566479553
 
       </li>
 
@@ -215,18 +215,18 @@ scroll_div.onmouseout=function() {MyMar=setInterval(Marquee,speed);}
  <!--联系代码开始-->
 <div class="kuandu">
 <div class="kefu">
-    QQ在线客服:123456789
-    <a target="_blank" style="color: rgb(51,102,153); text-decoration: none" href="http://wpa.qq.com/msgrd?v=3&amp;uin=321586417&amp;site=qq&amp;menu=yes"><img title="点击这里给我发消息" border="0" alt="点击这里给我发消息" data-bd-imgshare-binded="1" style="border-bottom: medium none; border-left: medium none; vertical-align: middle; border-top: medium none; border-right: medium none" src="http://b.qq.com/static/images/wp/wp_3.gif" /></a>
+    QQ在线客服:1441489121
+    <a target="_blank" style="color: rgb(51,102,153); text-decoration: none" href="http://wpa.qq.com/msgrd?v=3&amp;uin=1441489121&amp;site=qq&amp;menu=yes"><img title="点击这里给我发消息" border="0" alt="点击这里给我发消息" data-bd-imgshare-binded="1" style="border-bottom: medium none; border-left: medium none; vertical-align: middle; border-top: medium none; border-right: medium none" src="http://b.qq.com/static/images/wp/wp_3.gif" /></a>
 
 
- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欢迎进入售后群：123456789
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欢迎进入售后群：566479553
  <a target="_blank" href="https://jq.qq.com/?_wv=1027&k=5wLxw0h"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="H1Z1辅助" title="H1Z1辅助"></a>
  
  <br />
 请先加好友！如果群主不在，请咨询客服
 如果群主没回复您请咨询客服！请理性对待客服喔~
 欢迎进入售后群！<br />
-H1Z1辅助群
+小成工作室群聊
 
 同样的服务，我们力求更加专业
 同样的收费，我们力求更加合理
