--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ document.write(""+Math.round(zaixian+Math.random()*40)+"");</script>
     <div class="spn1"><img id="aimg_156139" aid="156139" src="none.png" zoomfile="hyxd.png" file="hyxd.png" class="zoom" onClick="zoom(this, this.src, 0, 0, 0)" width="588" height="350px"/></div>
     <div class="spn2">
       <div class="spzi">
-        <h1>道雪 <span style="color: #339900;font-size:14px;">已更新</span></h1>
-        <h2>支持功能：方框透视/显示血条/显示C4/显示距离/显示射线/无后坐力/等等</h2>
+        <h1>清雅 <span style="color: #339900;font-size:14px;">已更新</span></h1>
+        <h2>支持功能：方框透视/显示血条/显示C4/</h2>
         <h2>商品价格： 5/天     <span style="color:#FF0000;font-size:13px;">（限量100张天卡，售完恢复原价8）</span></h2>
         <h2>①客服QQ：1441489121<a href="" target="_blank"></a><a href="" target="_blank"></a></h2>
         <h2>支持系统：xp系统/Win7系统/Win8系统/Win10系统（支持网吧）</h2>
