--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@ document.onselectstart=new Function("event.returnValue=false;");
 <div class="goods_pic fuzhu-info1"><img src="http://i2.tiimg.com/705031/bec0d3c438ba460f.png" alt="" ondragstart='return false'>
 <img src="http://i2.tiimg.com/705031/cb653099fac3340a.png" alt="" ondragstart='return false'>
 <img src="http://i2.tiimg.com/705031/e28a3a6eeec0cf8f.png" alt="" ondragstart='return false' usemap="#Map6">
-<map name="Map6"><a href="https://www.lanzous.com/b0ce0s55a" title="点击购买小号" target="_blank" ondragstart='return false'>
-<area shape="rect" coords="28,3,208,48" href="https://www.lanzous.com/b0ce0s55a" target="_blank"></a>
+<map name="Map6"><a href="https://www.lanzous.com/b06rlpepe" title="点击购买小号" target="_blank" ondragstart='return false'>
+<area shape="rect" coords="28,3,208,48" href="https://www.lanzous.com/b06rlpepe" target="_blank"></a>
 </map>
 </div>
 </div>
@@ -208,9 +208,9 @@ document.onselectstart=new Function("event.returnValue=false;");
 <div class="goods">
 <div class="goods_pic fuzhu-info1"><img src="http://i1.fuimg.com/705031/12d89d58aa43a24d.png" alt="" ondragstart='return false'>
 <img src="http://i1.fuimg.com/705031/020f4511164121e2.png" alt="" ondragstart='return false'>
-<img src="http://i2.tiimg.com/705031/e28a3a6eeec0cf8f.png" alt="" ondragstart='return false' usemap="#Map6">
-<map name="Map6"><a href="https://www.lanzous.com/b0ce0tn5e" title="点击下载" target="_blank" ondragstart='return false'>
-<area shape="rect" coords="28,3,208,48" href="https://www.lanzous.com/b0ce0tn5e" target="_blank"></a>
+<img src="http://i2.tiimg.com/705031/e28a3a6eeec0cf8f.png" alt="" ondragstart='return false' usemap="#Map7">
+<map name="Map7"><a href="https://www.lanzous.com/b06rex11i" title="点击下载" target="_blank" ondragstart='return false'>
+<area shape="rect" coords="28,3,208,48" href="https://www.lanzous.com/b06rex11i" target="_blank"></a>
 </map>
 </div>
 </div>
