--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>大师工作室-CF辅助-穿越火线透视自瞄官网</title>
+<title>小成-大师工作室-CF辅助-穿越火线透视自瞄官网</title>
 <meta name="keywords" content="大师工作室,穿越火线辅助网,，CF外挂，CF透视自瞄，大师工作室，CF辅助官网">
 <meta name="description" content="大师工作室提供最专业的游戏软件,深受各类cf等射击游戏玩家喜爱,赶紧一起体验吧,专业的工作室团队持续更新!">
    <link rel="shortcut icon" href="favicon.ico">
@@ -229,7 +229,7 @@ document.onselectstart=new Function("event.returnValue=false;");
           <tr>
             <td width="350" class="fuzhu-info1">
 <img src="https://support.qq.com/data/121587/2020/0206/3868058fd22e437b00b30cdcb02ce066.png" width="340" height="250" alt=""><img class="mark" src="jrtj.png" alt=""></td>
-            <td width="410" class="fuzhu-info"><h3>【清雅透视】：内部方框透视</h3>
+            <td width="410" class="fuzhu-info"><h3>【作者小成-清雅透视】：内部方框透视</h3>
               <p>支持系统：【 Win&nbsp&nbsp-&nbsp&nbsp 7 / 8 / 10】</p>
 			  <p>功能列表：【 支持WeGame助手 】</p>
               <p>功能列表：【 方框透视+显示血量】</p>
@@ -281,7 +281,7 @@ document.onselectstart=new Function("event.returnValue=false;");
           <tr>
             <td width="350" class="fuzhu-info1">
 <img src="http://i2.tiimg.com/705031/8386e0f4b1f26ed9.gif" width="340" height="250" alt=""><img class="mark" src="jrtj.png" alt=""></td>
-            <td width="410" class="fuzhu-info"><h3><strong>【单板自瞄】：自动开枪瞄准<strong></h3>
+            <td width="410" class="fuzhu-info"><h3><strong>【作者小成-单板自瞄】：自动开枪瞄准<strong></h3>
               <p>支持系统：【Win&nbsp&nbsp-&nbsp&nbsp7 / 8 / 10】</p>
 			   <p>功能列表：【 支持WeGame助手 】</p>
               <p>功能列表：【自动开枪+自动瞄准】</p>
