--- a/index.html
+++ b/index.html
@@ -280,18 +280,18 @@ document.onselectstart=new Function("event.returnValue=false;");
         <tbody>
           <tr>
             <td width="350" class="fuzhu-info1">
-<img src="http://i2.tiimg.com/705031/8386e0f4b1f26ed9.gif" width="340" height="250" alt=""><img class="mark" src="jrtj.png" alt=""></td>
-            <td width="410" class="fuzhu-info"><h3><strong>【小成-单板自瞄】：自动开枪瞄准<strong></h3>
+<img src="/uploadfile/image/20200208/23c08519d.gif" width="340" height="250" alt=""><img class="mark" src="jrtj.png" alt=""></td>
+            <td width="410" class="fuzhu-info"><h3><strong>【小成-主播驱动自瞄】：自动开枪瞄准<strong></h3>
               <p>支持系统：【Win&nbsp&nbsp-&nbsp&nbsp7 / 8 / 10】</p>
 			   <p>功能列表：【 支持WeGame助手 】</p>
-              <p>功能列表：【自动开枪+自动瞄准】</p>
-              <p>安全指数：【 98 % 安全性能很高】</p>
+              <p>功能列表：【自动开枪+自瞄准+一键瞬狙】</p>
+              <p>安全指数：【100 % 安全性能极高】</p>
               <p>独家定制：【最新国外内部云数据】</p>
-              <strong>商品价格：6元/天
+              <strong>商品价格：170元/月
             <td width="230">
             <div class="right-button" >
-<a class="btn buy" href="http://ycdwz.cn/3LDpw" title="点击购买卡密" target="_blank">点击购买卡密</a>
-<a class="btn down" href="https://www.lanzous.com/b0ce02myf" title="点击下载软件" target="_blank" >点击下载软件</a>
+<a class="btn buy" href="https://www.lanzous.com/b804825" title="点击购买卡密" target="_blank">点击购买卡密</a>
+<a class="btn down" href="https://www.lanzous.com/b804825" title="点击下载软件" target="_blank" >点击下载软件</a>
       </div>
             </td>
           </tr>
