--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@ document.onselectstart=new Function("event.returnValue=false;");
 <img src="/uploadfile/image/20200208/23c08519d.gif" width="340" height="250" alt=""><img class="mark" src="jrtj.png" alt=""></td>
             <td width="410" class="fuzhu-info"><h3><strong>【小成-主播驱动自瞄】：自动开枪瞄准<strong></h3>
               <p>支持系统：【Win&nbsp&nbsp-&nbsp&nbsp7 / 8 / 10】</p>
-			   <p>功能列表：【 支持WeGame助手 】</p>
-              <p>功能列表：【自动开枪+自瞄准+一键瞬狙】</p>
+		<p>功能列表：【 支持WeGame助手 】</p>
+              <p>功能列表：【自动开枪+一键瞬狙】</p>
               <p>安全指数：【100 % 安全性能极高】</p>
               <p>独家定制：【最新国外内部云数据】</p>
               <strong>商品价格：170元/月
