--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ document.onselectstart=new Function("event.returnValue=false;");
               <strong>商品价格：170元/月
             <td width="230">
             <div class="right-button" >
-<a class="btn buy" href="https://www.lanzous.com/b804825" title="点击购买卡密" target="_blank">点击购买卡密</a>
+<a class="btn buy" href="http://www.qhfaka.com/details/C17292863D43374A" title="点击购买卡密" target="_blank">点击购买卡密</a>
 <a class="btn down" href="https://www.lanzous.com/b804825" title="点击下载软件" target="_blank" >点击下载软件</a>
       </div>
             </td>
