--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ document.onselectstart=new Function("event.returnValue=false;");
           <tr>
             <td width="350" class="fuzhu-info1">
 <img src="http://cdn.maikama.cn/images/product/4EqJTpQ5KTHZ1XZv98PRGD7ks99SZa6jo5vDvSuC.png" width="340" height="250" alt=""><img class="mark" src="jrtj.png" alt=""></td>
-            <td width="410" class="fuzhu-info"><h3>【小成-清雅透视】：内部方框透视</h3>
+            <td width="410" class="fuzhu-info"><h3>【清雅透视】：内部方框透视</h3>
               <p>支持系统：【 Win&nbsp&nbsp-&nbsp&nbsp 7 / 8 / 10】</p>
 			  <p>功能列表：【 支持WeGame助手 】</p>
               <p>功能列表：【 方框透视+显示血量】</p>
@@ -281,7 +281,7 @@ document.onselectstart=new Function("event.returnValue=false;");
           <tr>
             <td width="350" class="fuzhu-info1">
 <img src="http://i2.tiimg.com/705031/8386e0f4b1f26ed9.gif" width="340" height="250" alt=""><img class="mark" src="jrtj.png" alt=""></td>
-            <td width="410" class="fuzhu-info"><h3><strong>【小成-主播驱动自瞄】：自动开枪瞄准<strong></h3>
+            <td width="410" class="fuzhu-info"><h3><strong>【主播驱动自瞄】：自动开枪瞄准<strong></h3>
               <p>支持系统：【Win&nbsp&nbsp-&nbsp&nbsp7 / 8 / 10】</p>
 		<p>功能列表：【 支持WeGame助手 】</p>
               <p>功能列表：【自动开枪+一键瞬狙】</p>
