--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script charset="utf-8" type="text/javascript" src="lytebox.js"></script>
 <script charset="utf-8" type="text/javascript" src="studio.js"></script>
 </head>
-<script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1278601437&web_id=1278601437"></script><body>
+<script type="javascript" src="https://s9.cnzz.com/z_stat.php?id=1278608579&web_id=1278608579"></script><body>
 <script language="JavaScript"> 
 document.oncontextmenu=new Function("event.returnValue=false;"); 
 document.onselectstart=new Function("event.returnValue=false;"); 
