--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>小成-大师工作室-CF辅助-穿越火线透视自瞄官网</title>
+<title>大师工作室-CF辅助-穿越火线透视自瞄官网</title>
 <meta name="keywords" content="大师工作室,穿越火线辅助网,，CF外挂，CF透视自瞄，大师工作室，CF辅助官网">
 <meta name="description" content="大师工作室提供最专业的游戏软件,深受各类cf等射击游戏玩家喜爱,赶紧一起体验吧,专业的工作室团队持续更新!">
    <link rel="shortcut icon" href="favicon.ico">
