--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@ document.onselectstart=new Function("event.returnValue=false;");
             <div class="right-button" >
 <a class="btn buy" href="http://maikama.cn/c/e5glm0yqa331oc2oy4npdtx"title="点击购买卡密" target="_blank">点击购买卡密</a>
 <a class="btn down" href="https://www.lanzous.com/b06rjdkne" title="点击下载软件" target="_blank" >点击下载软件</a>
+<a class="btn down" href="http://cloud.tjit.net/public/uploads/20200211/8/8_Q8EBExFC_66666.mp4" title="点击查看视频" target="_blank" >点击查看</a>
             </div>
             </td>
           </tr>
@@ -292,6 +293,7 @@ document.onselectstart=new Function("event.returnValue=false;");
             <div class="right-button" >
 <a class="btn buy" href="http://www.qhfaka.com/details/C17292863D43374A" title="点击购买卡密" target="_blank">点击购买卡密</a>
 <a class="btn down" href="https://www.lanzous.com/b804825" title="点击下载软件" target="_blank" >点击下载软件</a>
+<a class="btn down" href="http://cloud.tjit.net/public/uploads/20200211/8/8_Q8EBExFC_66666.mp4" title="点击查看视频" target="_blank" >点击查看</a>
       </div>
             </td>
           </tr>
