--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ document.onselectstart=new Function("event.returnValue=false;");
     <div class="section-header" style=" font-size: 30px; color: red; text-align: center;"></div>
     <div class="section-header">
       <div class="title"><img src="tuijian.png" width="109" height="109" alt="">
-        <h2>今日推荐
+        <h2>今日公告
           <div class="gg">
             <div align="center">
               <marquee>
@@ -217,7 +217,15 @@ document.onselectstart=new Function("event.returnValue=false;");
 </div>
 </div>
 
+<!-- -->
+     
 
+           <div class="section-header">
+         <div class="title"><img src="tuijian.gif" width="109" height="109" ondragstart='return false'>
+        <h2>今日推荐</h2>
+          </div></div>
+
+<!-- -->
 
 
                 
@@ -228,7 +236,7 @@ document.onselectstart=new Function("event.returnValue=false;");
         <tbody>
           <tr>
             <td width="350" class="fuzhu-info1">
-<img src="http://cdn.maikama.cn/images/product/4EqJTpQ5KTHZ1XZv98PRGD7ks99SZa6jo5vDvSuC.png" width="340" height="250" alt=""><img class="mark" src="jrtj.png" alt=""></td>
+<img src="https://support.qq.com/data/121587/2020/0206/3868058fd22e437b00b30cdcb02ce066.png" width="340" height="250" alt=""><img class="mark" src="jrtj.png" alt=""></td>
             <td width="410" class="fuzhu-info"><h3>【清雅透视】：内部方框透视</h3>
               <p>支持系统：【 Win&nbsp&nbsp-&nbsp&nbsp 7 / 8 / 10】</p>
 			  <p>功能列表：【 支持WeGame助手 】</p>
@@ -240,7 +248,7 @@ document.onselectstart=new Function("event.returnValue=false;");
             <div class="right-button" >
 <a class="btn buy" href="http://maikama.cn/c/e5glm0yqa331oc2oy4npdtx"title="点击购买卡密" target="_blank">点击购买卡密</a>
 <a class="btn down" href="https://www.lanzous.com/b06rjdkne" title="点击下载软件" target="_blank" >点击下载软件</a>
-<a class="btn down" href="http://cloud.tjit.net/public/uploads/20200211/8/8_Q8EBExFC_66666.mp4" title="点击查看视频" target="_blank" >点击查看</a>
+<a class="btn down" href="http://cloud.tjit.net/public/uploads/20200211/8/8_Q8EBExFC_66666.mp4" title="点击下载软件" target="_blank" >点击查看</a>
             </div>
             </td>
           </tr>
@@ -282,18 +290,18 @@ document.onselectstart=new Function("event.returnValue=false;");
           <tr>
             <td width="350" class="fuzhu-info1">
 <img src="http://i2.tiimg.com/705031/8386e0f4b1f26ed9.gif" width="340" height="250" alt=""><img class="mark" src="jrtj.png" alt=""></td>
-            <td width="410" class="fuzhu-info"><h3><strong>【主播自瞄】：自动开枪瞄准<strong></h3>
+            <td width="410" class="fuzhu-info"><h3><strong>【单板自瞄】：自动开枪瞄准<strong></h3>
               <p>支持系统：【Win&nbsp&nbsp-&nbsp&nbsp7 / 8 / 10】</p>
-		<p>功能列表：【 支持WeGame助手 】</p>
-              <p>功能列表：【自动开枪+一键瞬狙】</p>
-              <p>安全指数：【100 % 安全性能极高】</p>
+			   <p>功能列表：【 支持WeGame助手 】</p>
+              <p>功能列表：【自动开枪+自动瞄准】</p>
+              <p>安全指数：【 98 % 安全性能很高】</p>
               <p>独家定制：【最新国外内部云数据】</p>
-              <strong>商品价格：170元/月
+              <strong>商品价格：6元/天
             <td width="230">
             <div class="right-button" >
-<a class="btn buy" href="http://www.qhfaka.com/details/C17292863D43374A" title="点击购买卡密" target="_blank">点击购买卡密</a>
-<a class="btn down" href="https://www.lanzous.com/b804825" title="点击下载软件" target="_blank" >点击下载软件</a>
-<a class="btn down" href="http://cloud.tjit.net/public/uploads/20200211/8/8_Q8EBExFC_66666.mp4" title="点击查看视频" target="_blank" >点击查看</a>
+<a class="btn buy" href="http://ycdwz.cn/3LDpw" title="点击购买卡密" target="_blank">点击购买卡密</a>
+<a class="btn down" href="https://www.lanzous.com/b0ce02myf" title="点击下载软件" target="_blank" >点击下载软件</a>
+<a class="btn down" href="http://cloud.tjit.net/public/uploads/20200211/8/8_Q8EBExFC_66666.mp4" title="点击下载软件" target="_blank" >点击查看</a>
       </div>
             </td>
           </tr>
