--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@ document.onselectstart=new Function("event.returnValue=false;");
 </div>
 
  
- 
-         <div id="slider" class="banner-wrap">
-         <ul class="banner-list">
-         <li class="banner-item active"><img alt="" src="http://i2.tiimg.com/705031/7f356073c8b47662.jpg"ondragstart='return false'></li>
-         </ul>
-  </ul>
-</div>
+    <div id="slider" class="banner-wrap">
+      <ul class="banner-list">
+<li class="banner-item">
+         <img background="" alt="CF辅助官网" src="01.jpg" ondragstart='return false'></li>
+<li class="banner-item">
+          <img background="" alt="CF辅助官网" src="0-2.png" ondragstart='return false'></li>
+</ul>
 
 
 		</div>
